# video-effects

./: .gitignore  README.md  configure.ac
src/: Makefile.am  cmdline.c  cmdline.h  effect.h  effect_1.c  effect_2.c  effect_3.c  main.c  video-effects.c  video-effects.h
src/region/: region.c  region.h
